# sei-x402

.github/workflows/: check_format.yml  check_lint.yml  check_package_lock.yml  java.yml  publish_npm_coinbase_x402.yml  publish_npm_x402.yml  publish_npm_x402_axios.yml  publish_npm_x402_express.yml  publish_npm_x402_fetch.yml  publish_npm_x402_hono.yml  publish_npm_x402_next.yml  publish_pypi_x402.yml  unit_tests.yml
docs/: README.md  docs.json  introduction.mdx  overview.mdx  quickstart.mdx
docs/clients/: fetch.mdx
docs/facilitators/: example.mdx  introduction.mdx
examples/python/clients/cdp-sdk/: README.md  main.py  pyproject.toml
examples/python/clients/httpx/: README.md  index.py  main.py  pyproject.toml
examples/typescript/: pnpm-lock.yaml
go/: .env-local  .env.example  README.md  go.mod  go.sum
go/pkg/coinbasefacilitator/: facilitator.go  jwt.go
go/pkg/facilitatorclient/: facilitatorclient.go
go/pkg/gin/: middleware.go  middleware_test.go
python/x402/: pyproject.toml
python/x402/src/x402/: common.py  encoding.py  exact.py  facilitator.py  types.py
python/x402/src/x402/clients/: __init__.py  base.py  httpx.py  requests.py
python/x402/src/x402/fastapi/: middleware.py
python/x402/tests/: test_common.py  test_encoding.py  test_exact.py  test_types.py
python/x402/tests/clients/: test_base.py  test_httpx.py  test_requests.py
python/x402/tests/fastapi/: test_middleware.py
python/x402/tests/fastapi_tests/: test_middleware.py
typescript/: pnpm-lock.yaml
typescript/scripts/: release.sh
typescript/site/: middleware.ts
(+24 files in other folders)
