[project]
name = "x402"
version = "0.1.0"
description = "x402: An internet native payments protocol"
readme = "README.md"
authors = [
    { name = "erik", email = "erik.reppel@coinbase.com" },
    { name = "Coinbase Developer Platform", email = "" }
]
requires-python = ">=3.12"
dependencies = [
    "eth-account>=0.13.7",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "pydantic>=2.11.4",
    "web3>=7.11.1",
]

[project.scripts]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
